--- a/R/tree.Rmd
+++ b/R/tree.Rmd
@@ -57,58 +57,59 @@ create.tree <- function(object, reduction='pca', dims=NULL, oldk = 1, newk = 2) 
      embeddings <- Embeddings(object = object, reduction = reduction)[, dims]
      km = kmeans(embeddings, centers = 2, iter.max = 10)$cluster
      seurat.clust = object$seurat_clusters
-     out = sapply(levels(seurat.clust), function(tt){
+     out = sapply(unique(seurat.clust), function(tt){
          aa = table(km[seurat.clust==tt]) %>% which.max() %>%
          names() 
          ifelse(aa=="1", oldk, newk)
-     })
+     }) 
+     names(out) = unique(seurat.clust)
+     
      if(length(unique(out))==1) out[] = oldk
      out
 }
 # Function to create tree from seurat cluster. 
 create.cluster.tree<- function(sco) {
-    seurat.clusters = levels(sco$seurat_clusters)
+    require(plyr)
+    old.clusters.id = unique(sco$seurat_clusters) %>% as.character
+    new.clusters.id = seq(length(old.clusters.id))
+    sco$seurat_clusters = mapvalues(sco$seurat_clusters, from = old.clusters.id, to = new.clusters.id)
+    seurat.clusters = new.clusters.id
     maxk = length(unique(sco$seurat_clusters))
     clust.mat = matrix(NA, ncol=maxk, nrow=maxk)
-    rownames(clust.mat) = paste0("clust", seurat.clusters) 
+    rownames(clust.mat) = paste0("clust", old.clusters.id) 
     clust.mat[,1] = 1
     for (ii in seq(1,maxk-1)) {
         clust.mat.old = clust.mat[, ii] 
         temp =  table(clust.mat.old) 
-        oldk = temp[temp > 1] %>% 
-            names() %>% as.numeric() %>% min()
+        temp = temp[temp > 1]
+        if(length(temp) == 0){ 
+            break
+        }
+        oldk = which.max(temp) %>% 
+        names() %>% as.numeric() %>% min()
         newk=max(clust.mat[,ii]) +1
-        if(oldk >= maxk) break()
-        seurat.clust.old = seurat.clusters[clust.mat.old == oldk]
+        if(oldk >= maxk){ 
+            break
+        }
+        seurat.clust.old = seurat.clusters[clust.mat.old == oldk] %>% as.character
         inx = which(seurat.clusters == oldk)
         out = create.tree(sco[,sco$seurat_clusters %in% seurat.clust.old], reduction="pca", oldk, newk, dims = 1:20)
         out = out[seurat.clust.old]
         clust.mat[, ii+1] = clust.mat[,ii]
-        clust.mat[paste0("clust", names(out)),ii+1] = unlist(out)
+        old.clusters.id.curr = old.clusters.id[as.numeric(names(out))]
+        clust.mat[paste0("clust", old.clusters.id.curr),ii+1] = unlist(out)
     }
     clust.mat%>% t() %>%
         unique() %>% t()
 }
 library(Seurat)
 sco = readRDS("<path>")
-sco = sco[,sample(ncol(sco),1000)]
-clust.mat.all = create.cluster.tree(sco)
+sco.sub = sco[,sample(ncol(sco),100)]
+clust.mat.all = create.cluster.tree(sco.sub)
 library(data.tree)
 # acme <- Node$new("Acme Inc.")
   # accounting <- acme$AddChild("Accounting")
-clust.mat.tree = list()
-clust.mat.tree[["1 1"]] = Node$new("root")
-# parent = 1
-for(ii in seq(2,ncol(clust.mat.all))){
-    for(parent in unique(clust.mat.all[,ii-1])){
-        parent.label = paste(ii-1, parent)
-        parent.inx = which(clust.mat.all[,ii-1]==parent)
-        childs = clust.mat.all[parent.inx,ii]
-        for(child in unique(childs))
-            clust.mat.tree[[paste(ii, child)]] = clust.mat.tree[[parent.label]]$AddChild(paste(ii, child))
-    }
-    
-}
+
 
 ```
 
