--- a/R/tree.deg.Rmd
+++ b/R/tree.deg.Rmd
@@ -95,8 +95,9 @@ mydeg <- function(sco.curr) {
     nonresponders = meta.dt[binaryResponse==0]$patient
     deseq.out = DESeq2DETest(data.use=exp.curr[,c(responders,nonresponders)], cells.1=responders, cells.2=nonresponders)
     deseq.dt = deseq.out %>%
-        as.data.table() %>%
+    as.data.frame %>% 
         mutate(gene=rownames(.)) %>%
+        as.data.table() %>%
         .[order(pvalue)] %>%
         .[,padj:=p.adjust(pvalue, method="fdr")]
     deseq.dt
@@ -206,11 +207,11 @@ library(magrittr)
 sco = GSE145281
 
 sco$binaryResponse =sco$response
-sco.sub = GSE145281[, GSE145281$seurat_clusters %in% c(10,11)]
+# sco.sub = GSE145281[, GSE145281$seurat_clusters %in% c(10,11)]
 
 library(clusterProfiler)
-responsders.enrichment = nonresponsders.enrichment = list()
-old.clusters.id = unique(sco$seurat_clusters) %>% as.character
+responsders.enrichment = nonresponders.enrichment = list()
+seurat.clusters= unique(sco$seurat_clusters) %>% as.character
 for (ii in seq(ncol(clust.mat) -1)) {
     clust.mat.old = clust.mat[, ii] 
     clust.mat.new = clust.mat[, ii+1] 
@@ -233,14 +234,18 @@ for (ii in seq(ncol(clust.mat) -1)) {
     deg.curr = deg.curr[padj<0.1]
     ## Find markers in children
     seurat.clust.cell.1 = seurat.clusters[clust.mat.new == oldk] %>% as.character
-    Idents(sco.sub) = ifelse(sco.sub$seurat_clusters %in% seurat.clust.cell.1, 0 ,1) %>% as.factor
+    Idents(sco.sub) = ifelse(sco.sub$seurat_clusters %in% seurat.clust.cell.1, 1 ,2) %>% as.factor
     markers.curr = FindAllMarkers(sco.sub, only.pos = TRUE, min.pct = 0.25, logfc.threshold = 0.25) ## this will give markers of both cell.1 (child1) and cell.2 (child2)
-    markers.top  = markers.curr %>% group_by(cluster) %>% top_n(n = 50, wt = avg_logFC)
+    markers.top  = markers.curr %>% group_by(cluster) %>% top_n(n = 200, wt = avg_logFC)
     term2gene  = markers.top %>%  as.data.table %>% 
-    .[,.(term=cluster,gene=gene)]
+    .[,.(term=cluster,gene=gene)] %>% as.data.frame
     ## perform enrichment see : https://yulab-smu.github.io/clusterProfiler-book/chapter3.html
-    responsders.enrichment[[ii]] = enricher(geneList=deg.curr[log2FoldChange> 0]$gene, term2gene = term2gene, pvalueCutoff=1) 
-    nonresponders.enrichment[[ii]] = enricher(geneList=deg.curr[log2FoldChange< 0]$gene, term2gene = term2gene, pvalueCutoff=1) 
+    try(
+      responsders.enrichment[[ii]] = enricher(gene=deg.curr[log2FoldChange> 0]$gene, TERM2GENE = term2gene, pvalueCutoff=1)@result 
+      )
+    try(
+    nonresponders.enrichment[[ii]] = enricher(gene=deg.curr[log2FoldChange< 0]$gene, TERM2GENE = term2gene, pvalueCutoff=1)@result
+    )
 
 }
 
