--- a/03-AugurComparison.Rmd
+++ b/03-AugurComparison.Rmd
@@ -77,7 +77,194 @@ p <- p + theme(axis.text.x=element_text(angle=90,hjust=1,vjust=0.5))
 plot(p)
 
 #save the plot
-png(file = "/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/auc_pbmc.png")
+#png(file = "/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/auc_pbmc.png")
 ```
+
+
+## Randomization tests 
+
+We want to see if `Augur` can fit random noise (this would be a bad thing if it can). 
+
+First, we randomly shuffle all of the cell labels 
+
+```{r}
+perm <- sample(1:nrow(Sco@meta.data), nrow(Sco@meta.data), replace = FALSE)
+Sco@meta.data$label <- Sco@meta.data$label[perm]
+
+head(Sco@meta.data)
+```
+
+Now all of the labels are scrambled, let's see what Augur says 
+
+
+```{r, eval = FALSE}
+augur_rand1 = Augur::calculate_auc(Sco, n_threads = 8)
+
+save(augur_rand1, file = "/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/augur_rand1_res.RData")
+```
+
+
+Now we take a look at the AUC 
+
+```{r}
+load("/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/augur_rand1_res.RData")
+augur_rand1$AUC
+```
+Note that the algorithm cut out low-density basophils, since there are only 14 responding cells which have this cell type and the default settings of their algorithm requires at least $20$ cells in each class (maybe this is interesting). Let's also plot it 
+
+
+```{r}
+library(ggplot2)
+
+#prepare colors
+library(Polychrome)
+alfa <- alphabet.colors(15)
+
+#plot
+df <- as.data.frame(augur_rand1$AUC)
+p <- ggplot(data=df, aes(x=cell_type, y = auc)) + geom_bar(stat = "identity", fill = alfa)
+p <- p + xlab("Cell type") + ylab("AUC (Augur)") + coord_cartesian(ylim=c(0.5,0.75))
+p <- p + theme(axis.text.x=element_text(angle=90,hjust=1,vjust=0.5))
+plot(p)
+
+#save the plot
+#png(file = "/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/auc_pbmc.png")
+```
+
+## Shuffling responders and non-responders 
+
+First we reload the data to clean things up 
+```{r}
+Sco <- readRDS("/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/gse145281/seurat.RDS")
+Sco <- subset(Sco, idents = c(15, 16), invert = TRUE)
+
+```
+
+
+Let's see what types we have 
+
+```{r}
+names(Sco@meta.data)
+
+unique(Sco@meta.data$patient)
+```
+
+Great
+
+```{r}
+patients <- c("R1", "R2", "R3", "R4", "R5", "NR1", "NR2", "NR3", "NR4", "NR5")
+#patients_perm <- sample(patients, 10, replace = FALSE)
+patients_perm <- c("R1", "NR1", "R2", "NR2", "R3", "NR3", "R4", "NR4", "R5", "NR5")
+patients_perm
+```
+
+Let's input these in
+
+```{r}
+head(Sco@meta.data$patient)
+
+Sco_copy <- Sco
+
+cntr <- 1
+for(i in patients) {
+  row_ixs <- which(Sco_copy@meta.data$patient == i)
+  Sco@meta.data$patient[row_ixs] <- patients_perm[cntr]
+  
+  strtype <- strsplit(patients_perm[cntr], split = "R")
+  if(strtype[[1]][1] == "N") {
+    Sco@meta.data$response[row_ixs] <- 0
+  }
+  else {
+    Sco@meta.data$response[row_ixs] <- 1
+  }
+  
+  cntr <- cntr+1 
+}
+rm(Sco_copy)
+
+head(Sco@meta.data$patient)
+```
+
+Now we can reset responses
+
+```{r}
+Sco@meta.data <- data.frame(label = Sco$response, cell_type = as.integer(Sco$seurat_clusters))
+Sco@meta.data[,1] <- sapply(Sco@meta.data[,1], function(x) response[x+1])
+Sco@meta.data[,2] <- sapply(Sco@meta.data[,2], function(x) cell_types[x])
+
+head(Sco@meta.data)
+```
+Now we can run `Augur`
+
+```{r, eval = FALSE}
+augur_rand2 = Augur::calculate_auc(Sco, n_threads = 8)
+
+save(augur_rand2, file = "/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/augur_rand2_res.RData")
+```
+
+
+Load the data back up
+
+```{r}
+load("/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/augur_rand2_res.RData")
+```
+
+
+
+
+Now we take a look at the AUC 
+
+```{r}
+augur_rand2$AUC
+```
+
+Note that the algorithm cut out low-density basophils, since there are only 14 responding cells which have this cell type and the default settings of their algorithm requires at least $20$ cells in each class (maybe this is interesting). Let's also plot it 
+
+
+```{r}
+library(ggplot2)
+
+#prepare colors
+library(Polychrome)
+alfa <- alphabet.colors(15)
+
+#plot
+df <- as.data.frame(augur_rand2$AUC)
+p <- ggplot(data=df, aes(x=cell_type, y = auc)) + geom_bar(stat = "identity", fill = alfa)
+p <- p + xlab("Cell type") + ylab("AUC (Augur)") + coord_cartesian(ylim=c(0.5,0.75))
+p <- p + theme(axis.text.x=element_text(angle=90,hjust=1,vjust=0.5))
+plot(p)
+
+#save the plot
+#png(file = "/Users/phillipnicol/Desktop/local_files/data/scDiffPopDATA/Augur/auc_pbmc.png")
+```
+
+# Appendix 
+
+
+```{r}
+sessionInfo()
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
